# magma-rs

./: Cargo.toml  notes.md
client-server/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_event.rs
magma-core/: Cargo.toml
magma-core/fuzz/: Cargo.toml
magma-core/fuzz/fuzz_targets/: fuzz_event.rs  fuzz_request_dto_to_request.rs  fuzz_response_dto_to_response.rs
magma-core/proptest-regressions/: lib.txt
magma-core/src/: lib.rs
magma-core/src/event/: mod.rs
magma-core/src/event/decode/: mod.rs
magma-core/src/event/dto/: mod.rs
magma-core/src/event/encode/: error.rs  mod.rs
magma-core/src/replication/: mod.rs
magma-core/src/replication/request/: dto.rs  mod.rs
magma-core/src/replication/response/: dto.rs  mod.rs
proptest-regressions/: lib.txt
src/: lib.rs
src/event/: mod.rs
src/event/decode/: error.rs  mod.rs
src/event/dto/: mod.rs
src/event/encode/: mod.rs
src/replication/: mod.rs
src/replication/request/: dto.rs  mod.rs
src/replication/response/: dto.rs  mod.rs
