[package]
name = "magma-rs"
version = "0.1.0"
edition = "2018"

[features]
default = ["std"]
std = []

[dependencies]
digest = {version = "0.9.0", default-features = false}
frunk = {version = "0.4", default-features = false}
snafu = {version = "0.6.10", default-features = false}
varu64 = {path = "../varu64-rs", default-features = false}

[dev-dependencies]
blake2 = "0.9.2"
proptest = "1"
