[package]
name = "client-server"
version = "0.1.0"
edition = "2018"

[dependencies]
blake2 = "0.9.2"
bytes = "1.1"
magma-core = {path = '../magma-core', default-features=false, features=["alloc"]}
jsonrpc-core = "18"
jsonrpc-core-client = "18"
jsonrpc-derive = "18"
snafu = "0.6.10"



[dev-dependencies]

[[bin]]
name = "client_server"
path = "src/bin/client_server.rs"
