[package]
name = "magma-core"
version = "0.1.0"
edition = "2018"

[features]
default = ["std"]
std = ["serde/std", "snafu/std"]
alloc = ["serde/alloc"]

[dependencies]
digest = {version = "0.9.0", default-features = false}
frunk = {version = "0.4", default-features = false}
readonly = {version = "0.2"}
snafu = {version = "0.6.10", default-features = false}
serde = {version = "1", default-features = false, features = ["derive"]}
varu64 = {version = "0.7", default-features = false}

[dev-dependencies]
blake2 = "0.9.2"
proptest = "1"


